tenant default plan
