# internal/server/server.go
@@ -51,9 +51,12 @@ func Server() error {
 	r.HandleFunc(apiPathPrefix("/payments/{network}/{txid}"), payment.HandleGetPaymentByTenant).Methods("GET")
 	r.HandleFunc(apiPathPrefix("/payments"), payment.HandleListPaymentsForTenant).Methods("GET")
 
-	r.HandleFunc(apiPathPrefix("/tenants/{tenant}"), tenant.HandleGetTenant).Methods("GET")
+	r.HandleFunc(apiPathPrefix("/tenants/{tenant}/"), tenant.HandleGetTenant).Methods("GET")
+	r.HandleFunc(apiPathPrefix("/tenants/{tenant}/"), tenant.HandleCreateTenant).Methods("POST")
+	r.HandleFunc(apiPathPrefix("/tenants/{tenant}/"), tenant.HandleHeadPaymentRequest).Methods("HEAD")
+	r.HandleFunc(apiPathPrefix("/tenants/{tenant}/{plan}"), tenant.HandleGetTenant).Methods("GET")
+	r.HandleFunc(apiPathPrefix("/tenants/{tenant}/{plan}"), tenant.HandleCreateTenant).Methods("POST")
 	r.HandleFunc(apiPathPrefix("/tenants/{tenant}/{plan}"), tenant.HandleHeadPaymentRequest).Methods("HEAD")
-	r.HandleFunc(apiPathPrefix("/tenants/{tenant}"), tenant.HandleCreateTenant).Methods("POST")
 	r.HandleFunc(apiPathPrefix("/tenants/{tenant}/jwt"), tenant.HandleGenerateNewJWT).Methods("GET")
 
 	r.HandleFunc(apiPathPrefix("/plans"), tenant.HandleListAccessPlans).Methods("GET")
